--- a/totales.html
+++ b/totales.html
@@ -284,16 +284,22 @@ border: 0;
  <thead>
   <tr>
    <th style="text-align:left;"> ETIQUETA_BLOQUE </th>
+   <th style="text-align:right;"> GOB </th>
+   <th style="text-align:right;"> INT </th>
    <th style="text-align:left;"> GOBvsINT </th>
   </tr>
  </thead>
 <tbody>
   <tr>
    <td style="text-align:left;"> <span style="     border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: cyan !important;">San Juan por Todos</span> </td>
+   <td style="text-align:right;"> 189362 </td>
+   <td style="text-align:right;"> 221582 </td>
    <td style="text-align:left;"> <span style="     color: red !important;">-32220</span> </td>
   </tr>
   <tr>
    <td style="text-align:left;"> <span style="     border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: yellow !important;">Unidos por San Juan</span> </td>
+   <td style="text-align:right;"> 218807 </td>
+   <td style="text-align:right;"> 144639 </td>
    <td style="text-align:left;"> <span style="     color: blue !important;">74168</span> </td>
   </tr>
 </tbody>
